--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,6 @@
 {
-    "name": "openaustralia/scraperwiki"
+    "name": "openaustralia/scraperwiki",
+    "require": {
+        "ext-pdo_sqlite": "*"
+    }
 }
